--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 tch = "0.16.0"
 fast_snarf = { path = "./fast_snarf" }
 renderer = { path = "./renderer" }
+knn_points = { path = "./knn_points" }
+
 
 [build-dependencies]
 cc = "1.0"
