--- a/fast_snarf/Cargo.toml
+++ b/fast_snarf/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 tch = "0.16.0"
 torch-sys = "0.16.0"
+knn_points = { path = "../knn_points" }
 
 [build-dependencies]
 cc = "1.0"
