Add smplx constants and vertex_joints logic

--- a/smplx/Cargo.toml
+++ b/smplx/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 tch = "0.16.0"
 torch-sys = "0.16.0"
+lazy_static = "1.4.0"
 
 [env]
 LIBTORCH = { value = "/usr/local/libtorch", relative = false }
