--- a/fast_snarf/Cargo.toml
+++ b/fast_snarf/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tch = "0.16.0"
 torch-sys = "0.16.0"
 knn_points = { path = "../knn_points" }
+tensor_utils = { path = "../tensor_utils" }
 
 [build-dependencies]
 cc = "1.0"
