Add 3d-pose-rs as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tensor_utils"]
 	path = tensor_utils
 	url = https://github.com/TriformHQ/tch-tensor-utils.git
+[submodule "3d-pose-rs"]
+	path = 3d-pose-rs
+	url = git@github.com:TriformHQ/3d-pose-rs.git
