--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,16 @@ fast_snarf = { path = "./fast_snarf" }
 renderer = { path = "./renderer" }
 knn_points = { path = "./knn_points" }
 
-
 [build-dependencies]
 cc = "1.0"
+
+[lib]
+name = "jessica_lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "jessica"
+path = "src/main.rs"
 
 [env]
 LIBTORCH = { value = "/usr/local/libtorch", relative = false }
