Add SMPL Deformer (smpl_deformer.rs)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ torch-sys = "0.16.0"
 fast_snarf = { path = "./fast_snarf" }
 renderer = { path = "./renderer" }
 knn_points = { path = "./knn_points" }
+three-d-pose-rs = { path = "./3d-pose-rs" }
+
 
 [build-dependencies]
 cc = "1.0"
