Add SNARF deformer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ torch-sys = "0.16.0"
 fast_snarf = { path = "./fast_snarf" }
 renderer = { path = "./renderer" }
 knn_points = { path = "./knn_points" }
+tensor_utils = { path = "./tensor_utils" }
 three-d-pose-rs = { path = "./3d-pose-rs" }
 
 
