--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,18 @@
-[package]
-name = "JessicaInference"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
 
-[dependencies]
+members = [
+    "crates/jessica",
+    "crates/jessica-fast-snarf",
+    "crates/jessica-knn-points",
+    "crates/jessica-smpl",
+    "crates/jessica-utils",
+]
+
+[workspace.dependencies]
 tch = "0.16.0"
 torch-sys = "0.16.0"
-fast_snarf = { path = "./fast_snarf" }
-renderer = { path = "./renderer" }
-knn_points = { path = "./knn_points" }
-tensor_utils = { path = "./tensor_utils" }
-three-d-pose-rs = { path = "./3d-pose-rs" }
-
-
-[build-dependencies]
-cc = "1.0"
-
-[lib]
-name = "jessica_lib"
-path = "src/lib.rs"
-
-[[bin]]
-name = "jessica"
-path = "src/main.rs"
+log = "0.4.22"
 
 [env]
 LIBTORCH = { value = "/usr/local/libtorch", relative = false }
