--- a/crates/jessica-tcnn-networks/Cargo.toml
+++ b/crates/jessica-tcnn-networks/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tch.workspace = true
 torch-sys.workspace = true
 log.workspace = true
+libc = "0.2.121"
 
 [build-dependencies]
 cc.workspace = true
