Implement basic raymarcher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "crates/jessica-knn-points",
     "crates/jessica-smpl",
     "crates/jessica-tcnn-networks",
+    "crates/jessica-model-renderer",
     "crates/jessica-utils",
 ]
 
