--- a/crates/jessica/Cargo.toml
+++ b/crates/jessica/Cargo.toml
@@ -8,7 +8,7 @@ tch.workspace = true
 torch-sys.workspace = true
 
 jessica-fast-snarf = { path = "../jessica-fast-snarf" }
-renderer = { path = "../renderer" }
+jessica-model-renderer = { path = "../jessica-model-renderer" }
 jessica-knn-points = { path = "../jessica-knn-points" }
 jessica-utils = { path = "../jessica-utils" }
 jessica-smpl = { path = "../jessica-smpl" }
